--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="top-row">
                 <button id="theme-btn" title="Change theme">dark</button>
                 <button id="mode-btn" title="Change mode">normal</button>
+                <button id="fullscreen-btn" title="Toggle fullscreen">fullscreen</button>
             </div>
             <div class="bottom-row">
                 <button id="restart-btn" title="Restart Test">
