--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typing Test</title>
+    <title>Kern</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <main class="container">
+        <h1 id="logo"></h1>
+
         <div id="stats">
             <div class="stat-box">
                 <div class="label">wpm</div>
@@ -21,6 +24,7 @@
                 <div id="accuracy">100</div>
             </div>
         </div>
+
         <div id="typing-area">
             <div id="words"></div>
         </div>
@@ -44,6 +48,10 @@
             </div>
         </div>
 
+        <div id="focus-hint" class="visible">
+            Click here or start typing to begin
+        </div>
+        
         <div class="ui-controls">
             <div class="top-row">
                 <button id="theme-btn" title="Change theme">dark</button>
