--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </div>
         </div>
 
-        <div id="typing-area">
+        <!-- MODIFIED LINE: Added tabindex="0" for keyboard focus -->
+        <div id="typing-area" tabindex="0">
             <div id="words"></div>
         </div>
         
