--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             </div>
         </div>
 
-        <!-- MODIFIED LINE: Added tabindex="0" for keyboard focus -->
-        <div id="typing-area" tabindex="0">
+        <div id="typing-area">
             <div id="words"></div>
         </div>
         
@@ -41,6 +40,7 @@
             </div>
             <div class="results-details">
                 <div class="detail-item" id="results-time">0s</div>
+                <div class="detail-item" id="results-raw">raw 0</div>
                 <div class="detail-item" id="results-chars">0/0/0</div>
             </div>
             <div class="restart-prompt">
